src/assets/css/components/popup.css
@block popup {
  height: 100vh;
  width: 100%;

  background-color: color-mod($color-grey-darkest a(90%));

  opacity: 0;
  visibility: hidden;

  transition: opacity 2s;

  @apply .tw-fixed .tw-pin-t .tw-pin-l .tw-z-40;

  @element content {
    background-color: white;
    width: 75%;

    @apply .tw-absolute .mu-position-center .tw-table .tw-shadow-xl-dark .tw-rounded-sm;
  }

  @element left {
    width: calc(100 / 3) %;

    @apply .tw-table-cell .tw-align-middle;
  }

  @element img {
    @apply .tw-block .tw-object-cover;
  }

  @element right {
    width: calc(100 / 3 * 2) %;

    @apply .tw-table-cell .tw-align-middle .tw-p-8 .tw-p-8;
  }

  @element text {
    hyphens: auto;

    column-count: 2;
    column-gap: 2rem;
    column-rule: 1px solid $color-grey-light; /* stylelint-disable-line unit-whitelist */
  }

  @element close {
    top: 1rem;
    right: 1.5rem;

    @apply .tw-absolute .tw-text-2xl;
  }

  &:target {
    opacity: 1;
    visibility: visible;
  }
}

